# teapot

./: .gitignore  Dockerfile  Pipfile  Procfile  README.md  deploy.sh  main.py  manage.py  pyproject.toml  requirements.txt
app/: config.py  database.py  models.py
app/routes/: discord.py  email.py  telegram.py
helper/: models.py  serializers.py  urls.py  views.py
helper/migrations/: 0001_initial.py  0002_telegrammember.py  0003_telegrammember_username_and_more.py  0004_discordmember.py  0005_email_campaign_email_country.py  0006_email_discord_username.py  0007_joindaaccount.py  0008_alter_joindaaccount_discord_member_id_and_more.py
helper/services/: discord.py  telegram.py
helper/static/: home.md  privacy.md  terms.md
helper/templates/helper/: base.html  markdown.html
teapot/: asgi.py  config.py  settings.py  urls.py  wsgi.py
