[project]
name = "teapot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adrf>=0.1.9",
    "asgiref>=3.9.1",
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "django-rest-framework>=0.1.0",
    "environs>=14.2.0",
    "markdown>=3.8.2",
    "requests>=2.32.4",
]
