[project]
name = "teapot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adrf>=0.1.9",
    "asgiref>=3.9.1",
    "discord>=2.3.2",
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "django-rest-framework>=0.1.0",
    "environs>=14.2.0",
    "gunicorn>=23.0.0",
    "markdown>=3.8.2",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "telethon>=1.40.0",
]
